changed the about me section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">About Me</h2>
                             <p><font color="black"> Hi! My name is Bryce Moskiewicz. I am an Electrical Engineering major at the University of Pittsburgh, and am also a member of the University of Pittsburgh's varsity baseball team. I am from the suburbs of Chicago, Illinois where I am part of
-                            a family of four which includes my mother Michele, my father Alan, and my older brother Brent. I am a hardworking and dedicated student who loves to learn new things.</font></p>
+                            a family of four. I am a hardworking and dedicated student who loves to learn new things.</font></p>
 
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
                         	<div id="container">
-                             
+
                           </div>
                     </div>
                 </div>
