made the image react to different browser

--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                     <div class="margin-b-60">
-
-                            <img height="300" width="850" src="pitt_bio.jpg"></img>
-
+                      <img height=auto width=100% src="pitt_bio.jpg">
                     </div>
                 </div>
                 <!--// end row -->
