added Magic Mirror Project

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0"><font color="black">Projects</font></h2>
-                            <p><font color="black">Feel free to check them out! All links below are to web projects, while to the right you will find videos I have made!</font></p>
-                            <h3><a href="http://www.pitt.edu"><u><font color="blue">University of Pittsburgh</font></u></a>  </h3>
+                            <p><font color="black">Feel free to check out some of my personal projects listed to the right!</font></p>
+                            <h3><a href="MagicMirror.html">Magic Mirror Project</h3>
 
                         </div>
                     </div>
