linked to home page

--- a/MagicMirror.html
+++ b/MagicMirror.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <ul class="topbar">
-  <li class="barElement"><a class="active" href="(MY WEBSITE)">Home</a></li>
+  <li class="barElement"><a class="active" href="index.html">Home</a></li>
   <li class="barElement"><a href="#Idea">Idea</a></li>
   <li class="barElement"><a href="#Build">Build</a></li>
   <li class="barElement"><a href="#Finished">Finished Mirror</a></li>
