--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0"><font color="black">Projects</font></h2>
-                            <p><font color="black">Feel free to check out some of my personal projects listed to the right!</font></p>
-                            <h3><a href="MagicMirror.html">Magic Mirror Project</h3>
-
+                            <p><font color="black">Feel free to check them out! All links to the right lead to webpages I created which go in depth on the each project!</font></p>
                         </div>
                     </div>
+               <h1 align="middle"><a href="MagicMirror.html"><font color="blue">Magic/Smart Mirror</font></a></h1>
+               <h1 align="middle"><a href="ConwaysGame.html"><font color="blue">Conway's Game of Life</font></a></h1>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
                         	<div id="container">
@@ -144,7 +144,7 @@
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
                                 <h2 class="margin-b-0">Resume</h2>
-                                <p>Last updated <i>May 7th, 2019</i> </p>
+                                <p>Last updated <i>August 20th, 2019</i> </p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
