final additions to mirror and game of life

--- a/ConwaysGame.html
+++ b/ConwaysGame.html
@@ -19,7 +19,7 @@
 As a First Year Engineering student at the University of Pittsburgh, all freshmen students are required to take the same courses
 regardless of major. One of the courses I was required to take was Introduction to Engineering Computing. This course covered
 MATLAB as well as the C programming language and was structured such that every student was a part of a group
-to work on projects and homework with. Throughout the course, we were assigned two group projects, and one of those projects
+to work on projects and homework. Throughout the course, we were assigned two group projects, and one of those projects
 was to create Conway's Game of Life with the MATLAB programming language and display some statistics to the user afterwards.
 </p>
 <hr></hr>
@@ -69,7 +69,7 @@ If you're someone who is interested in testing their programming abilities I wou
 <hr></hr>
 <div class="row">
     <ul class="row">
-        <li> Location: <a target="_blank" href="https://www.google.com/maps/place/Chicago,+IL/@41.8333925,-88.0121478,10z/data=!3m1!4b1!4m5!3m4!1s0x880e2c3cd0f4cbed:0xafe0a6ad09c0c000!8m2!3d41.8781136!4d-87.6297982"> Chicago, IL</a></li>
+        <li> Location: <a target="_blank" href="https://www.google.com/maps/place/Chicago,+IL/@41.8333925,-88.0121478,10z/data=!3m1!4b1!4m5!3m4!1s0x880e2c3cd0f4cbed:0xafe0a6ad09c0c000!8m2!3d41.8781136!4d-87.6297982"> La Grange, IL</a></li>
         <li> Phone Number: <a href="tel:630-670-5758"> 630-670-5758 </a></li>
         <li> Email: <a href="mailto:brycemosk26@gmail.com">brycemosk26@gmail.com </a></li>
     </ul>
