--- a/MagicMirror.html
+++ b/MagicMirror.html
@@ -17,7 +17,7 @@
 <h1 id="Idea">The Idea</h1>
 <hr></hr>
 <p>
-This idea started when I was browsing Reddit a week or two before Father's Day. Like most 19 year olds, I didn't know what I was going to get
+The idea for this project came to me as I was browsing Reddit a week or two before Father's Day. Like most 19 year olds, I didn't know what I was going to get
 my dad for Father's Day yet. I stumbled across a post of someone who had just finished making a Magic/Smart Mirror.
 It seemed really cool, so I decided to do a little more reading about the project.
 The list of items needed for this project was suprisngly small for what I was expecting.
@@ -36,7 +36,7 @@ All of these things could be easily obtained through Amazon, and I was looking t
 <h1 id="Build">The Build</h1>
 <hr></hr>
 <p>
-  Once I got all of the parts listed above shipped to my house, I started putting things together.
+  Once I recieved all of the parts above, I started putting things together.
   First, I unboxed the Raspberry Pi, hooked it up to my monitor and downloaded the Raspian Operating System.
   Once the operating system was installed, I manuvered my way over to the open source software for the <a target="_blank" href="https://magicmirror.builders/">Magic Mirror</a> project.
   After a quick pull of the software onto the Raspberry Pi, I was ready to get started configuring the project for my father.
@@ -97,7 +97,7 @@ All of these things could be easily obtained through Amazon, and I was looking t
 <hr></hr>
 <div class="row">
     <ul class="row">
-        <li> Location: <a target="_blank" href="https://www.google.com/maps/place/Chicago,+IL/@41.8333925,-88.0121478,10z/data=!3m1!4b1!4m5!3m4!1s0x880e2c3cd0f4cbed:0xafe0a6ad09c0c000!8m2!3d41.8781136!4d-87.6297982"> Chicago, IL</a></li>
+        <li> Location: <a target="_blank" href="https://www.google.com/maps/place/Chicago,+IL/@41.8333925,-88.0121478,10z/data=!3m1!4b1!4m5!3m4!1s0x880e2c3cd0f4cbed:0xafe0a6ad09c0c000!8m2!3d41.8781136!4d-87.6297982"> La Grange, IL</a></li>
         <li> Phone Number: <a href="tel:630-670-5758"> 630-670-5758 </a></li>
         <li> Email: <a href="mailto:brycemosk26@gmail.com">brycemosk26@gmail.com </a></li>
     </ul>
