--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0"><font color="black">Projects</font></h2>
-                            <p><font color="black">Feel free to check them out! All links to the right lead to webpages I created which go in depth on the each project!</font></p>
+                            <p><font color="black">Feel free to check them out! All links to the right lead to webpages I created which go in depth on each project!</font></p>
                         </div>
                     </div>
                <h1 align="middle"><a href="MagicMirror.html"><font color="blue">Magic/Smart Mirror</font></a></h1>
@@ -206,7 +206,7 @@
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Location</h5>
-                                    <a target="_blank" href="https://www.google.com/maps/place/Chicago,+IL/@41.8333925,-88.0121478,10z/data=!3m1!4b1!4m5!3m4!1s0x880e2c3cd0f4cbed:0xafe0a6ad09c0c000!8m2!3d41.8781136!4d-87.6297982">Chicago, IL</a>
+                                    <a target="_blank" href="https://www.google.com/maps/d/viewer?gl=US&ie=UTF8&oe=UTF8&msa=0&mid=1z44y_iLNF-6cTIdN8VldLhr8Oy0&ll=41.778777118610385%2C-87.86489860251618&z=10">La Grange, IL</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Phone Number</h5>
