--- a/MagicMirror.html
+++ b/MagicMirror.html
@@ -20,7 +20,7 @@
 The idea for this project came to me as I was browsing Reddit a week or two before Father's Day. Like most 19 year olds, I didn't know what I was going to get
 my dad for Father's Day yet. I stumbled across a post of someone who had just finished making a Magic/Smart Mirror.
 It seemed really cool, so I decided to do a little more reading about the project.
-The list of items needed for this project was suprisngly small for what I was expecting.
+The list of items needed for this project was actually suprisingly small.
 It was only: </p>
   <ul>
     <li>A Piece of Acrylic</li>
