--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Bryce Moskiewicz: Electrical Engineer</title>
+        <title>Bryce Moskiewicz: Electrical/Computer Engineer</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -73,7 +73,7 @@
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
                             <h1 class="promo-block-title"> Bryce <br/> Moskiewicz  </h1>
-                            <h1 class="promo-block-text"> <i> <font color="white" >University of Pittsburgh: </br> Electrical Engineer </font> </i></h1>
+                            <h1 class="promo-block-text"> <i> <font color="white" >University of Pittsburgh: </br> Electrical/Computer Engineer </font> </i></h1>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.instagram.com/bmoskie26" target="_blank" class="social-icons"><i class="icon-social-instagram"></i></a></li>
@@ -95,7 +95,7 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">About Me</h2>
-                            <p><font color="black"> Hi! My name is Bryce Moskiewicz. I am an Electrical Engineering major at the University of Pittsburgh, and am also a member of the University of Pittsburgh's varsity baseball team. I am from the suburbs of Chicago, Illinois where I am part of
+                            <p><font color="black"> Hi! My name is Bryce Moskiewicz. I am an Electrical/Computer Engineering major at the University of Pittsburgh, and am also a member of the University of Pittsburgh's varsity baseball team. I am from the suburbs of Chicago, Illinois where I am part of
                             a family of four. I am a hardworking and dedicated student who loves to learn new things.</font></p>
 
                         </div>
