Changed layout of main page
Changed layout of main page

--- a/ConwaysGame.html
+++ b/ConwaysGame.html
@@ -27,7 +27,7 @@ was to create Conway's Game of Life with the MATLAB programming language and dis
 <hr></hr>
 <p>
 Conway's Game of Life is a cellular automaton which has an end state only effected by the initial state of the game.
-Now, that didn't really make much sense to me at first either. The way I would describe the game would be a grid
+In other words, it's a grid
 simulation that is entirely based off of its starting point. The game revolves around giving the program an initial amount of
 alive and dead cells, and then simply watching the patterns change according to these four rules:
 <ol>
