--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
                             <h1 class="promo-block-title"> Bryce <br/> Moskiewicz  </h1>
-                            <h1 class="promo-block-text"> <i> <font color="white" >University of Pittsburgh: </br> Electrical/Computer Engineer </font> </i></h1>
+                            <h1 class="promo-block-text"> <i> <font color="white" >University of Pittsburgh: </br> Computer Engineer </font> </i></h1>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.instagram.com/bmoskie26" target="_blank" class="social-icons"><i class="icon-social-instagram"></i></a></li>
@@ -95,8 +95,7 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">About Me</h2>
-                            <p><font color="black"> Hi! My name is Bryce Moskiewicz. I am an Electrical/Computer Engineering major at the University of Pittsburgh, and am also a member of the University of Pittsburgh's varsity baseball team. I am from the suburbs of Chicago, Illinois where I am part of
-                            a family of four. I am a hardworking and dedicated student who loves to learn new things.</font></p>
+                            <p><font color="black"> Hi! My name is Bryce Moskiewicz. I am a Computer Engineering major at the University of Pittsburgh, and am also a member of the University of Pittsburgh's varsity baseball team. I am a hardworking and dedicated student from the suburbs of Chicago.</font></p>
 
                         </div>
                     </div>
@@ -111,34 +110,111 @@
         <!-- End About -->
                 <!-- Skills -->
 
-        <div id="skills">
-        	<div class="bg-color-sky-light" data-auto-height="true">
+      <div id="skills">
+        <div class="bg-color-sky-light" data-auto-height="true">
             <div class="container content-lg">
                 <div class="row">
-                    <div class="col-sm-3 sm-margin-b-30">
-                        <div class="text-right sm-text-left">
-                            <h2 class="margin-b-0"><font color="black">Projects</font></h2>
-                            <p><font color="black">Feel free to check them out! All links to the right lead to webpages I created which go in depth on each project!</font></p>
-                        </div>
-                    </div>
-               <h1 align="middle"><a href="MagicMirror.html"><font color="blue">Magic/Smart Mirror</font></a></h1>
-               <h1 align="middle"><a href="ConwaysGame.html"><font color="blue">Conway's Game of Life</font></a></h1>
-                    <div class="col-sm-8 col-sm-offset-1">
-                        <div class="margin-b-60">
-                        	<div id="container">
+                    <h1 align = "middle"><font color="black"><b>Projects</b></font></h1>
+                    <p align="middle"><font color="black">Feel free to check them out! If you have any questions about these projects please contact me with the information below.</font></p>
+                  <hr style="border-width: 10px;"></hr>
+                  </br>
 
-                          </div>
-                    </div>
-                </div>
+               <h1 align="middle"><font color="black">Smart Mirror</font></h1>
+               <div style="float: right; width: 50%;">
+              <iframe width="560" height="400" src="https://www.youtube.com/embed/cVmDjJmcd2M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+               </div>
+               <div style="float: right; width: 50%;">
+               <img src="Final.jpeg" width=560px height=400px></img>
+               </div>
+
+             <div style="float: left; width: 100%; padding-top:10px;">
+             <p>
+             <font color="black" size="3">
+             A Smart Mirror is a mirror which displays helpful widgets for you to see and interact with while you are getting ready to leave your house for the day.
+             My specific Smart Mirror is configured to display Time, Date, Sports Scores and Standings, Weather, Stock Tickers, Bob Ross Paintings, as well as daily Jeopardy questions.
+             I also was able to outfit the Smart Mirror with a 'remote control' phone app which allows you to control the display of the mirror.
+             </font>
+             </p>
+             </div>
+             <p>
+             <font color="black" size="3">
+             This project involved the use of a Raspberry Pi, a piece of acrylic glass, and a display for the Raspberry Pi to connect with.
+             The finished product can be seen above, and is still used every day in my home. (The picture on the left is of my build while
+             the video on the right is not mine, but is intended to give a clearer picture of the project)
+             </font>
+             </p>
+
+              <hr  style="border-width: 10px;"></hr>
+            </br>
+               <h1 align="middle"><font color="black">Conway's Game of Life</font></h1>
+               <div style="float: left; width: 50%; padding-right: 70px;">
+               <iframe width=500px height="300" src="https://www.youtube.com/embed/Aq51GfPmD54?start=16" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                 <p><font size="3">This is merely a demonstration of the game and is not the code used for my group project.
+                 If you are interested in the source code my group created for this project, I have included it <a href="ConwaySourceCode.txt" target="_blank">here</a>. </font></p>
+               </div>
+
+               <p><font color="black" size="3">
+               Conway's Game of Life is a cellular simulation which has an end state only effected by the initial state of the game.
+               In other words, it's a grid
+               simulation that is entirely based off of its starting point. The game revolves around giving the program an initial amount of
+               alive and dead cells, and then watching the cells change according to these four rules:
+               </font>
+               <ol>
+                 <li><font color="black">Any live cell with fewer than two live neighbors dies, as if by underpopulation.</font></li>
+                 <li><font color="black">Any live cell with two or three live neighbors lives on to the next generation.</font></li>
+                 <li><font color="black">Any live cell with more than three live neighbors dies, as if by overpopulation.</font></li>
+                 <li><font color="black">Any dead cell with exactly three live neighbors becomes a live cell, as if by reproduction.</font></li>
+               </ol>
+               <font color="black" size="3"> My role in this project was to impliment the rules shown above, as well as get those rules to interact with
+               a grid of cells to create the animation shown in the video to the left. </font>
+               </p>
+             </br>
+             </br>
+             </br>
+
+
+
+               <hr  style="border-width: 10px;"></hr>
+
+               </br>
+               <h1 align="middle"><font color="black">Machine Learning Applied to the S&P 500</font></h1>
+               <div style="float: left; width:50%;">
+               <img width=550px  src="newplot (3).png"></img>
+               <div style="padding-top: 10px;">
+               <p><font size="3">I have include the code I created for this project <a href="Stock_Project.js">here</a>.</font></p>
+               </div>
+               </div>
+               <div style="float: left; width:50%;">
+                 <p><font color="black" size="3">For this project, I wanted to study the effects of a recession or depression
+                 on the short term future of the economy. To accompany this analysis, I created a model which predicts the likelyhood of different percentage increases
+                 for the S&P 500 following those recessionary and depressionary time periods based off of how severe those recessionary and depressionary time periods were.</font></p>
+                 <p><font color="black" size="3">I took a look at historical data for the S&P 500, and picked out a variety of points which
+                 followed a decrease of 10% or more for the S&P 500. I then looked ahead 1 year and input a '1' into a Neural Network if the price had risen by atleast
+                 25%, otherwise I put in a '0'. I also looked ahead 5 years and input a '1' into a Neural Network if the price had risen by atleast 50%, otherwise I put in a '0'.
+                 </font></p>
+                 <p><font color="black" size="3">I then plotted the corresponding outputs of the Neural Network to the left. What I had found is that the greater the stock market
+                   decreases in price over a period of time, the higher the likelyhood that the stock market will increase by atleast 25% in 1 year, and atleast 50% in 5 years. To generalize this conclusion,
+                   it is essentially saying that the more the market decreases over a period of time, the more likely the market is to increase in the near future. this finding was unsurprising to me, but further
+                   emphasized for myself not to panic when the market decreases in value.
+                   </font></p>
+                   <p><font color="black" size="3">
+                     To accomplish this project I used javascript as well as the Brain.js and Plotly.js libraries. Brain.js was used for their Neural Network feature, while Plotly.js was used
+                     for their plotting features.
+                   </font></p>
+                 </div>
+
+               </div>
+
                 <!--// end row -->
             </div>
         </div>
     </div>
+  </div>
+
         <!-- End Skills -->
 
         <!-- Resume -->
         <div id="resume">
-
                 <div class="container content-lg">
                     <div class="row">
                         <div class="col-sm-3 sm-margin-b-30">
@@ -225,7 +301,7 @@
                 </div>
             </div>
         </div>
->
+
 
         <!-- Back To Top -->
         <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
