--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Bryce Moskiewicz: Electrical/Computer Engineer</title>
+        <title>Bryce Moskiewicz: Computer Engineer</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -67,13 +67,13 @@
         <!--========== END HEADER ==========-->
 <!-- update -->
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="./img/background.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="./img/UofIPicture.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
                             <h1 class="promo-block-title"> Bryce <br/> Moskiewicz  </h1>
-                            <h1 class="promo-block-text"> <i> <font color="white" >University of Pittsburgh: </br> Computer Engineer </font> </i></h1>
+                            <h1 class="promo-block-text"> <i> <font color="white" >University of Illinois at Urbana-Champaign: </br> Computer Engineer </font> </i></h1>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.instagram.com/bmoskie26" target="_blank" class="social-icons"><i class="icon-social-instagram"></i></a></li>
@@ -95,7 +95,7 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">About Me</h2>
-                            <p><font color="black"> Hi! My name is Bryce Moskiewicz. I am a Computer Engineering major at the University of Pittsburgh, and am also a member of the University of Pittsburgh's varsity baseball team. I am a hardworking and dedicated student from the suburbs of Chicago.</font></p>
+                            <p><font color="black"> My name is Bryce Moskiewicz, I’m currently a Junior Computer Engineering major with a 3.9 GPA as well as 8 months of prior internship experience doing full-stack development. I am also a former Division 1 athlete. I’m interested in software engineering specifically in full-stack, back-end, or embedded environments. </font></p>
 
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
                                 <h2 class="margin-b-0">Resume</h2>
-                                <p>Last updated <i>August 20th, 2019</i> </p>
+                                <p>Last updated <i>September 1st, 2020</i> </p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
@@ -235,7 +235,7 @@
                                             <h3 class="color-white">Resume Download</h3>
                                             <p class="color-white margin-b-5">Click Here</p>
                                         </div>
-                                    <a href="./Resume.pdf" target="_blank" class="content-wrapper-link"></a>
+                                    <a href="./Bryce_Resume.pdf" target="_blank" class="content-wrapper-link"></a>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
