--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!--========== END HEADER ==========-->
 <!-- update -->
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="./img/UofIPicture.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="./UofIPicture.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
@@ -118,7 +118,20 @@
                     <p align="middle"><font color="black">Feel free to check them out! If you have any questions about these projects please contact me with the information below.</font></p>
                   <hr style="border-width: 10px;"></hr>
                   </br>
-
+            
+                    <h1 align="middle"><font color="black">Snake AI</font></h1>
+                    <div style="float: left; width: 50%;">
+                    <iframe src="https://editor.p5js.org/Bmoskie26/embed/dnBCqelpx" style="width: 600px; height: 420px; overflow: hidden;"  scrolling="no" frameborder="0"></iframe>
+                    </div>
+                    <div style="float: left; width: 50%;">
+                    <iframe src="https://editor.p5js.org/Bmoskie26/embed/I-ImMEuc_" style="width: 600px; height: 420px; overflow: hidden;"  scrolling="no" frameborder="0"></iframe>
+                    </div>
+                    <p>
+                      <font color="black" size="3"> Snake AI </font>
+                    </p>
+                    <hr style="border-width: 10px;"></hr>
+                    </br>
+            
                <h1 align="middle"><font color="black">Smart Mirror</font></h1>
                <div style="float: right; width: 50%;">
               <iframe width="560" height="400" src="https://www.youtube.com/embed/cVmDjJmcd2M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
