--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!--========== END HEADER ==========-->
 <!-- update -->
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="./UofIPicture.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="./UofIPicture.jpeg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
