--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
-                            <h1 class="promo-block-title"> <font color="black" > Bryce Moskiewicz </font> </h1>
+                            <h1 class="promo-block-title"> <font color="black" > Bryce </br> Moskiewicz </font> </h1>
                             <h1 class="promo-block-text"> <i> <font color="black" >University of Illinois at Urbana-Champaign: </br> Computer Engineer </font> </i></h1>
                         </div>
                         <ul class="list-inline">
