--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
                     <iframe src="https://editor.p5js.org/Bmoskie26/embed/I-ImMEuc_" style="width: 600px; height: 420px; overflow: hidden;"  scrolling="no" frameborder="0"></iframe>
                     </div>
                     <p>
-                      <font color="black" size="3"> Snake AI </font>
+                      <font color="black" size="3"> The AI model on the left works by finding the shortest path to the red pixel possible which sometimes leads to it trapping
+                          iteself and dying. The AI model on the right works by 
+                           following a closed loop which covers every cell respectively. The latter of the two is guaranteed to win no matter what even though it may take a long time to win.
+                          (HTML5, JavaScript, P5.js) 
+                        </font>
                     </p>
                     <hr style="border-width: 10px;"></hr>
                     </br>
