--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
                     <p>
                       <font color="black" size="3"> The AI model on the left works by finding the shortest path to the red pixel possible which sometimes leads to it trapping
                           iteself and dying. The AI model on the right works by 
-                           following a closed loop which covers every cell respectively. The latter of the two is guaranteed to win no matter what even though it may take a long time to win.
-                          (HTML5, JavaScript, P5.js) 
+                           following a closed loop which covers every cell respectively. The latter of the two is guaranteed to win no matter what even though it may take a long time. 
                         </font>
                     </p>
                     <hr style="border-width: 10px;"></hr>
@@ -198,7 +197,7 @@
                <div style="float: left; width:50%;">
                <img width=550px  src="newplot (3).png"></img>
                <div style="padding-top: 10px;">
-               <p><font size="3">I have include the code I created for this project <a href="Stock_Project.js">here</a>.</font></p>
+               <p><font size="3">I have included the code I created for this project <a href="Stock_Project.js">here</a>.</font></p>
                </div>
                </div>
                <div style="float: left; width:50%;">
