--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
-                            <h1 class="promo-block-title"> <font color="black" > Bryce </br> Moskiewicz </font> </h1>
-                            <h1 class="promo-block-text"> <i> <font color="black" >University of Illinois at Urbana-Champaign: </br> Computer Engineer </font> </i></h1>
+                            <h1 class="promo-block-title"> <font color="orange" > Bryce </br> Moskiewicz </font> </h1>
+                            <h1 class="promo-block-text"> <i> <font color="orange" >University of Illinois at </br> Urbana-Champaign: </br> Computer Engineer </font> </i></h1>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.instagram.com/bmoskie26" target="_blank" class="social-icons"><i class="icon-social-instagram"></i></a></li>
@@ -156,7 +156,7 @@
              <font color="black" size="3">
              This project involved the use of a Raspberry Pi, a piece of acrylic glass, and a display for the Raspberry Pi to connect with.
              The finished product can be seen above, and is still used every day in my home. (The picture on the left is of my build while
-             the video on the right is not mine, but is intended to give a clearer picture of the project)
+             the video on the right is not mine, but is intended to give a clearer picture of the project).
              </font>
              </p>
 
