--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
              <div style="float: left; width: 100%; padding-top:10px;">
              <p>
-             <font color="black" size="3">
+             <font color="black">
              A Smart Mirror is a mirror which displays helpful widgets for you to see and interact with while you are getting ready to leave your house for the day.
              My specific Smart Mirror is configured to display Time, Date, Sports Scores and Standings, Weather, Stock Tickers, Bob Ross Paintings, as well as daily Jeopardy questions.
              I also was able to outfit the Smart Mirror with a 'remote control' phone app which allows you to control the display of the mirror.
@@ -153,7 +153,7 @@
              </p>
              </div>
              <p>
-             <font color="black" size="3">
+             <font color="black">
              This project involved the use of a Raspberry Pi, a piece of acrylic glass, and a display for the Raspberry Pi to connect with.
              The finished product can be seen above, and is still used every day in my home. (The picture on the left is of my build while
              the video on the right is not mine, but is intended to give a clearer picture of the project).
