--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
                                 <h2 class="margin-b-0">Resume</h2>
-                                <p>Last updated <i>September 1st, 2020</i> </p>
+                                <p>Last updated <i>August 7th, 2021</i> </p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
