--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">About Me</h2>
-                            <p><font color="black"> My name is Bryce Moskiewicz, I’m currently a Junior Computer Engineering major with a 3.9 GPA as well as 8 months of prior internship experience doing full-stack development. I am also a former Division 1 athlete. I’m interested in software engineering specifically in full-stack, back-end, or embedded environments. </font></p>
-
+                            <p><font color="black"> My name is Bryce Moskiewicz, I’m currently a Senior Computer Engineering major with a 3.82 GPA as well as 16 months of prior internship experience as a software engineer at Amazon and U.S. Steel. I am also a former Division 1 athlete. </font></p>
                         </div>
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
